--- a/client/src/components/screens/Subject/components/ContentObject.css
+++ b/client/src/components/screens/Subject/components/ContentObject.css
@@ -27,3 +27,18 @@
 	border: none;
 	background-color: var(--complementary);
 }
+
+.textObjectWrapper {
+	display: grid;
+	flex-direction: column;
+	align-items: center;
+	align-content: center;
+	text-align: center;
+	max-width: 20rem;
+	margin: 1rem;
+	margin-bottom: 2rem;
+}
+
+.Column > .textObjectWrapper {
+	margin-bottom: 0.5rem;
+}
