--- a/client/src/components/screens/Subject/components/Deadline.css
+++ b/client/src/components/screens/Subject/components/Deadline.css
@@ -5,6 +5,7 @@
 	justify-content: center;
 	align-items: center;
 	margin: 0 1rem;
+	margin-bottom: 1rem;
 }
 
 .countdownText {
